# eclair-html-parser

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/eclair-html/: document.h  errors.h  node.h  tag_names.h
src/: cleaner.h  document.cpp  errors.cpp  node.cpp  parser.h  renderer.h  tag_names.cpp  text_extractor.h
src/common/: error_manager.h  position.h  print_unicode.h  token_receiver.h  tokens.h  tools.h
src/parse_buffer/: meta_charset_parser.h  parse_buffer.h
src/tokenizer/: base_state_handler.h  config.h  entities.cpp  entities.h  state_handler.h  state_logger.h  states.h  tokenizer.h
src/tree_builder/: active_formatting_elements.h  adoption_agency.h  insertion_mode.h  insertion_mode_names.h  insertion_modes.h  node_inserter.h  open_elements.h  state.h  tree_builder.h
src/tree_builder/steps/: after_after_body.h  after_after_frameset.h  after_body.h  after_frameset.h  after_head.h  base_step.h  before_head.h  before_html.h  foreign_content.h  in_body.h  in_caption.h  in_cell.h  in_column_group.h  in_frameset.h  in_head.h  in_head_noscript.h  in_row.h  in_select.h  in_select_in_table.h  in_table.h  in_table_body.h  in_table_text.h  in_template.h  initial.h  root_builder.h  steps.h  text.h
tools/: ced.patch
